2013-02-16  Earnie Boyd  <earnie@users.sourceforge.net>

	* include/stdlib.h (_MAX_ENV): Define if not __STRICT_ANSI__.

2013-01-08  Earnie Boyd  <earnie@users.sourceforge.net>

	* config.h.in, configure.ac, README, include/*, src/*, tests/*:
	Modify "@copy 2012" to read "Copyright 2012, 2013".

2013-01-07  Earnie Boyd  <earnie@users.sourceforge.net>

	* include/complex.h, include/ddk/*.h, include/dir.h,
	include/directx/*.h, include/gdiplus/*.h, include/getopt.h,
	include/imagehlp.h, include/ntldap.h, include/psapi.h,
	include/scrnsave.h, include/search.h, include/snmp.h,
	include/tlhelp32.h, include/wctype.h, include/winber.h,
	include/windows.h, include/winldap.h, include/winsnmp.h,
	include/winsock2.h, src/libcrt/crt/crtmt.c, src/libcrt/crt/crtst.c,
	src/libcrt/crt/mthr.c, src/libcrt/crt/mthr_init.c,
	src/libcrt/crt/pseudo-reloc.c, src/libcrt/crt/tlsmcrt.c,
	src/libcrt/crt/tlsmthread.c, src/libcrt/crt/tlssup.c,
	src/libcrt/crt/tlsthrd.c, src/liblargeint/largeint.c,
	src/libscrnsave/scrnsave.c: Insert removed author attribution.

2012-11-10  Earnie Boyd  <earnie@users.sourceforge.net>

	https://sourceforge.net/tracker/?func=detail&aid=3572971&group_id=2435&atid=102435

	* include/wchar.h (_vscwprintf): Add declaration.

2012-11-09  Earnie Boyd  <earnie@users.sourceforge.net>

	https://sourceforge.net/tracker/?func=detail&aid=3559134&group_id=2435&atid=102435

	* include/wincrypt.h (CertEnumCRLsInStore): Add declaration.
	* lib/lib32/crypt32.def (CertEnumCRLsInStore): Add import definition.

2012-11-09  Keith Marshall  <keithmarshall@users.sourceforge.net>

	* include/_mingw.h (_MINGW_H): Revert to consistent use of...
	(__MINGW_H): ...this, as multiple inclusion guard macro.

2012-10-31  Earnie Boyd  <earnie@users.sourceforge.net>

	https://sourceforge.net/tracker/?func=detail&aid=3408074&group_id=2435&atid=102435

	* Makefile.in (mingwrt_lib_LIBRARIES): Remove incorrect variable
	assignment.
	* src/libcrt/search/tdelete.c: Remove incorrect assertion about vkey.